# arrow-encoder

./: Cargo.toml  README.md  lib.md  run_tests.sh
.cargo/: config.toml
.github/workflows/: test.yml
databases/: compose.yaml  postgres-old.rs
databases/postgres/: init.sql
src/: json.rs  lib.rs  postgres.rs
src/sqlx/: mod.rs
